[#216][#217] test: add e2e integration test framework & metalake integration test (#235)
### What changes were proposed in this pull request?

e2e integration test framework implementation below function.

+ Create a new integration module, you can execute each integration test
code in it.
+ Each test set can start/stop a Graviton Server instance in the local
or Github action environment.
+ You can through Graviton Client or HttpClient to connect the Graviton
Server instance to test.

#### Test operation flow

1. Deploy integration test environment
    ```
    ./gradlew clean build
    ./gradlew clean compileDistribution 
# The `compileDistribution` command will create
`distribution/package/...` directory in the Graviton root directory.
    ```
2. Execute test units in the `integration` module.
    + Auto start Graviton Server before the test.
    + Execute your test code at this time.
    + Auto stop Graviton Server after the test.

3. Manual execution of tests units in GravitonServer debug mode
+ Enable `GRAVITON_DEBUG_OPTS` envronirment in the graviton-env.conf
file.
    + Manual execution `./distribution/package/bin/graviton.sh start`
    + Remote debug Graviton Server in the 8000 port (default).
    + Set breakpoint in the Graviton project.
    + Manual execution integration tests unit.

### Why are the changes needed?

e2e test provides a real deployment environment to execute integration
tests.

+ It can validity test Graviton startup scripts, graviton.conf,
graviton-env.sh, and more properties files.
+ It can validity test Catalogs JAR isolated.

Fix: #216, #217 

### Does this PR introduce _any_ user-facing change?

N/A

### How was this patch tested?

Tested in the integration module

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -41,3 +41,7 @@ jobs:
         run: |
           gradle build
           gradle compileDistribution
+
+      - name: Graviton Integration Tests
+        run: |
+          gradle integrationTest
